# hauling_web

./: .gitignore  Cargo.toml  README.md  index.html  quotes.db
public/: admin.css  index.html  styles.css
src/: main.rs
tools/: generate_hash.rs
